--- a/GUI/stylesheet.css
+++ b/GUI/stylesheet.css
@@ -16,6 +16,10 @@ body{
     align-items: center;
 }
 
+.container{
+    height: 80%;
+    width: 5%;
+}
 .outer-circle{
     width:250px;
     height: 250px;
@@ -36,9 +40,8 @@ body{
 }
 
 .laps{
-    height: 250px;
-    height: 300px;
-    overflow: auto;
+    height: 50px;
+    width: 300px;
 
 }
 
@@ -82,12 +85,26 @@ body{
 .laps{
     list-style: none;
     color: white;
+    height: 5px;
+    overflow: auto;
+    padding: 15px;
 }
 
+.lap-item{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding: 1px;
+    background-color: aqua;
+    text-align: center;
+}
 .number{
     color:antiquewhite;
 }
 
-.timestamp{
-    display: inline;
-}
+.time-stamp{
+    display: inline-block;
+    margin-left: 25px;
+    padding: 2px;
+
+} 
